Document `confirmDonation` & use of Stripe.js customer sessions secrets in OpenAPI
And move `salesforceUpsert` into this contract & fix a couple of errors
